<resources>
    <string name="app_name">MTA Afrique</string>
    <string name="hello_world">Thanks Lord!</string>
    <string name="cotation">Demande d\'expédition</string>
    <string name="tracing">Suivi de colis</string>
    <string name="contact">Nous contacter</string>
    <string name="titre">Titre</string>
    <string name="titre1">Titre</string>
    <string name="nom_complet">Nom et Prénom*</string>
    <string name="nom_complethint">Nom et Prénom</string>
    <string name="telephone">Téléphone*</string>
    <string name="telephonehint">Téléphone</string>
    <string name="email">Email</string>
    <string name="pays">Pays</string>
    <string name="pays1">Pays</string>
    <string name="ville">Ville*</string>
    <string name="villehint">Ville</string>
    <string name="ville1">Ville*</string>
    <string name="adresse">Adresse\n(Facultatif pour le Cameroun)</string>
    <string name="adressehint">Rue et numéro</string>
    <string name="suivant">Suivant</string>
    <string name="suivant1">Suivant</string>
    <string name="annuler">Annuler</string>
    <string name="codepostal">Code Postal\n(Facultatif pour le Cameroun)</string>
    <string name="codepostalhint">Code Postal</string>
    <string name="expediteur">Départ (Expéditeur)</string>
    <string name="destinataire">Arrivée (Destinataire)</string>
    <string name="precedent">Précédent</string>
    <string name="infoscolis">Informations sur le colis</string>
    <string name="descriptioncolis">Description du colis</string>
    <string name="description">Description du colis</string>
    <string name="poids">Poids(en kg)</string>
    <string name="longueur">Longueur(en cm)</string>
    <string name="largeur">Largeur(en cm)</string>
    <string name="hauteur">Hauteur(en cm)</string>
    <string name="envoyer">Envoyer</string>
    <string name="title">Veuillez remplir le formulaire de contact!</string>
    <string name="civilite">Civilité(Mr/Mme)</string>
    <string name="nom_contact">Nom *</string>
    <string name="nom_hint">Nom</string>
    <string name="prenom_contact">Prénom</string>
    <string name="email_contact">Email *</string>
    <string name="email_hint">Email</string>
    <string name="telephone_contact">Téléphone *</string>
    <string name="objet">Objet</string>
    <string name="message">Message *</string>
    <string name="message_hint">Saississez votre message ici</string>
    <string name="tracing_colis">Suivi de colis</string>
    <string name="numero_colis">Numéro du colis</string>
    <string name="suivre">Suivre</string>
    <string name="ok_home">OK</string>
    <string name="new_tracing_result">Retour</string>
    <string name="resultat_tracing_colis">Résultat du tracing</string>
    <string name="title_activity_cotation">CotationActivity</string>
    <string name="title_activity_tracing">TracingActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_destinataire">DestinataireActivity</string>
    <string name="title_activity_description_colis">DescriptionColisActivity</string>
    <string name="title_activity_tracing_result">TracingResultActivity</string>
</resources>
