<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CotationActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/expediteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/expediteur"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/titre"
                />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/nom_complet"
                />

            <EditText
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/nom_complethint"
                />

            <TextView
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/telephone"
                />

            <EditText
                android:id="@+id/telephonetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephonehint"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="phone"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:layout_marginLeft="20dp"
                android:text="@string/email"
                />

            <EditText
                android:id="@+id/emailtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:id="@+id/pays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:layout_marginLeft="20dp"
                android:text="@string/pays"
                />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/ville"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:layout_marginLeft="20dp"
                android:text="@string/ville"
                />

            <EditText
                android:id="@+id/villetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/villehint"
                />

            <TextView
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/adresse"
                />

            <EditText
                android:id="@+id/adressetxt"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adressehint"
                />

            <TextView
                android:id="@+id/codepostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textColor="@color/bluef"
                android:text="@string/codepostal"
                />

            <EditText
                android:id="@+id/codepostaltxt"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codepostalhint"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/suivant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/suivant" />

                <Button
                    android:id="@+id/annuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/annuler" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>